fix dropdown spacing

--- a/src/assets/stylesheets/components/settings_dropdown.scss
+++ b/src/assets/stylesheets/components/settings_dropdown.scss
@@ -3,7 +3,7 @@
   display: inline-block;
 
   .settings-dropdown__dropdown {
-    min-height: 100%;
+    min-height: 48px;
     max-height: 600px;
     min-width: 220px;
     z-index: 10;
